--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,6 +1,6 @@
 #home {
-    position: relative; 
-    height: 100%;
+    position: relative;
+    height: 100vh;
     width: 100%;
     display: flex;
     align-items: center;
